# Runweave

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_single_run.py  02_resume_thread.py  03_custom_tools.py  04_skills.py  05_context_budget.py  06_inspect_thread.py  07_multi_run_stress.py  08_anthropic_model.py  09_custom_instructions.py  10_key_facts.py
runweave/: __init__.py
runweave/context/: __init__.py  budget.py  callback.py  counter.py  instruction_compressor.py  step_compressor.py
runweave/core/: agent.py  memory.py  model.py  tool.py
runweave/executor/: python_executor.py  workspace_executor.py
runweave/runtime/: __init__.py  history.py  key_facts.py  memory_io.py  result.py  run_record.py  runtime.py  summary.py  thread.py  thread_store.py  workspace_tools.py
runweave/skill/: __init__.py  loader.py  tools.py
runweave/tool/: __init__.py  loader.py
tests/context/: test_budget.py  test_counter.py  test_instruction_compressor.py  test_step_compressor.py
tests/runtime/: test_key_facts.py  test_runtime_key_facts_integration.py  test_workspace_tools.py
tests/tool/: test_loader.py
